--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,15 @@ main {
   border-radius: 3px;
   position: relative;
   overflow: hidden;
+  transition: transform 0.3s ease-in-out;
 }
 
+.movie:hover {
+  transform: scale(1.05);
+}
 .movie img {
   width: 100%;
+  height: 80%;
 }
 
 .movie-info {
@@ -80,12 +85,12 @@ main {
   font-weight: bold;
 }
 
-.movie-info span.green {
-  color: lightgreen;
+.movie-info span.yellow {
+  color: yellow;
 }
 
-.movie-info span.orange {
-  color: orange;
+.movie-info span.white {
+  color: white;
 }
 
 .movie-info span.red {
@@ -105,4 +110,67 @@ main {
 
 .movie:hover .overview {
   transform: translateY(0);
+}
+
+.genre-list {
+  padding: 20px 25px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.genre-list h3 {
+  margin: 0;
+  padding: 4px 8px;
+  background-color: #f0f2f5;
+  border-radius: 9999px;
+}
+
+.genre-list ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+
+.genre-list li {
+  padding: 4px 8px;
+  background-color: #f0f2f5;
+  border-radius: 9999px;
+  cursor: pointer;
+}
+
+.genre-list li:hover {
+  background-color: #7378c5;
+}
+
+/* when toggliging  */
+.genre-list li.selected {
+  background-color: orange;
+  color: white;
+}
+
+.clear-Genres {
+  background-color: var(--secondary-color);
+  color: #ffffff;
+  font-size: 16px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 30px;
+}
+
+/* Hover effect */
+clear-Genres:hover {
+  background-color: #7378c5;
+}
+
+.no-results {
+  color: #eee;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 40px;
 }
