--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,31 @@ clear-Genres:hover {
   margin-top: 50px;
   font-size: 40px;
 }
+
+.pagination {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+  color: #eee;
+}
+
+.page {
+  padding: 20px;
+  cursor: pointer;
+}
+
+.page.disabled {
+  cursor: not-allowed;
+  color: #808088;
+}
+
+.current {
+  border-radius: 50%;
+  border: 5px solid #ffa500;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 600;
+}
